# Signal-Server

./: .gitignore  .txt  1200.h  1200.h.gch  3600.h  3600.h.gch  CHANGELOG  CHANGELOG.txt  GNUmakefile  Makefile  README.md  SignalServer_Manual.odt  _curvature  _fresnel  _fresnel60  _profile  _reference  build.sh  common.h  hata.cpp  image-ppm.cc  image-ppm.hh  image.cc  image.hh  inputs.cc  inputs.hh  itm.cpp  json.c  main.cc  main.cpp  main.hh  mainHD.cc  mainHD.cpp  models.cpp  modeltest.py  outputs.cc  outputs.hh  ppa.cpp  runsig.sh  signalserver  (+5 more)
antenna/: DB413-B.az  DB413-B.el
models/: README  cost.cc  ecc33.cc  ericsson.cc  fspl.cc  hata.cc  itwom3.0.cc  los.cc  los.hh  sui.cc  sui.hh  test.cc
output/GoogleEarth/: Coverage_Regacom_161.3_MHz_Titlis.kmz  genkmz.sh  runsig.sh
output/OpenLayers/: README.md
output/OpenLayers/Regacom/: Coverage_calculation_Bantiger.txt  Coverage_calculation_Chasseral.txt  Regacom_Switzerland_WGS84.html
output/OpenLayers/Tests/: Regacom_Tests_WGS84.html
output/OpenLayers/UMTS900/: Coverage_calculation_Guggisberg_BE.txt  Coverage_calculation_Plasselbschlund_FR.txt  Coverage_calculation_Rechthalten_FR.txt  UMTS900_WebMercator.html
src/: .clang-format  .clang-tidy  CMakeLists.txt  GNUmakefile  Makefile  cmdline.cc  common.h  common.hh  grayscale.cc  image-ppm.cc  image-ppm.hh  image.cc  image.hh  inputs.cc  inputs.hh  main.cc  main.hh  outputs.cc  outputs.hh  suitest.cc  tiles.cc  tiles.hh
src/models/: cost.cc  ecc33.cc  egli.cc  ericsson.cc  fspl.cc  fspl.hh  hata.cc  itm.cc  itwom3.0.cc  itwom3.0.hh  los.cc  los.hh  pel.cc  soil.cc  sui.cc  testmodels.cc
utils/antenna/: README.md  ant2azel.py  ubnt2ant.py
utils/geoTiff/: geotiff2geojson.sh
utils/json/: CMakeLists.txt  json.cc
utils/lidar/: README.md
utils/sdf/: README.md  aw3d2sdf.sh  convert_sdf.sh  convert_sdf_hd.sh  postdownload.sh
utils/sdf/usgs2sdf/: CMakeLists.txt  README.md  build  srtm2sdf.cc  usgs2sdf.cc
